feat(payload): 新增 HTTP 带外 Jar 与 toString 链生成页
需求：补齐上一轮遗留的两项功能——预设链下的 HTTP 带外 Jar（支持自定义 URL 与命令），
以及 Payload 下独立成页的 toString 利用链（支持自定义目标类）。

根因（改代码前定位）：
1) toString 模板从「中继节点」写起，漏掉 toString 触发节点。触发节点是链的第一个 gadget，
   缺了它引擎判定首节点非法，5 条模板全部报「链不被引擎认可」。补到链首后全部
   valid=true build=true。
2) 带外 Jar 用另一个 ServiceManager 实例发布时返回成功，但发布结果与地址来自两个不同实例，
   地址回落到上游默认端口 50000，那个 URL 打不开。约束必须收在同一处。
3) 上一轮留下的半成品文件从未被引用，其中 PayloadToStringPage.java 行末缺分号。

改动：
- src/payload/ToStringPreset.java：重写。新增 trigger 字段，chain(trigger, relay) 拼完整序列，
  gadgets 含触发节点；5 条实测可用模板。
- src/payload/ChainScope.java：新增。23 个 toString 触发节点清单与 genericCandidates()，
  让「触发节点归属」只有一份规则，通用生成页据此剔除候选。
- src/payload/JarPreset.java：新增。5 种 Jar 包装 x 5 种末端动作模板、参数键声明与 Zip 魔数校验。
- src/service/OobJarService.java：新增。把「HTTP 服务实例 + 发布 + 地址拼接 + 停止」封在类内，
  使「同实例托管」约束无法被调用方绕过。
- src/ui/PayloadToStringPage.java、PayloadToStringController.java：新增 toString 链页视图与行为。
- src/ui/OobJarPage.java、OobJarController.java：新增带外 Jar 页视图与行为，输入框跟随动作声明启用。
- src/ui/PayloadColumns.java、PayloadController.java：末列候选过 ChainScope 过滤；
  过滤只放候选层，不动被服务页共用的 ChainEditor。
- src/ui/NavController.java、WorkbenchPages.java、WidgetRegistry.java、src/Main.java：
  payload 分类新增 payload.tostring / payload.oobjar，两个页面懒加载、控件登记与装配；
  shutdown() 先停带外 Jar 再停其余服务。
- src/ui/ConfigForm.java、ConfigController.java：新增「toString 链配置」与「带外 Jar 配置」
  两个分组共 7 个配置键（tostring_default_template / tostring_default_command /
  oobjar_bind_host / oobjar_port 默认 50001 / oobjar_default_url /
  oobjar_default_path 默认 /tmp/payload.bin / oobjar_default_command）。
- 自检：PayloadCheck 68 → 100 条断言（新增 25 种 Jar 组合矩阵与触发节点归属校验）；
  UiNavigationCheck 新增两个页面与配置分组断言（含 awaitStatus/labels 辅助）；
  UiSwitchEndToEndCheck 新增「真实托管 -> HTTP 取回合法 Zip -> 停止后端口可再绑定」端到端。
- 文档：docs/DESIGN-payload.md 补第十二节（Jar 类型 x 动作实测矩阵 / 参数键 / 排除项 /
  同实例约束根因）与第十三节（toString 模板实测 / 漏触发节点根因 / 角色表 / 单点归属）；
  README 中英同步（导航、配置页、预填页面、项目结构、测试章节，并新增两节功能说明）；
  PROGRESS.md 状态表与时间线更新；OpenSpec 新增 payload-tostring-chain 与 presets-http-jar 两个 change。

验证：
- java